--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Product</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -73,175 +73,58 @@
         </div>
     </header>
 
-    <main class="main">
-        <div class="main_left">
-            <img src="img/main_img.svg" alt="maim img">
-        </div>
-        <div class="main__right">
-            <div class="vertical-stripe"></div>
-            <div class="main__content">
-                <h1 class="main_content_title bold">THE BRAND</h1>
-                <h2 class="main_content_title">OF LUXERIOUS <span class="main_content_title pink">FASHION</span></h2>
-            </div>
-        </div>
-    </main>
-
-    <section class="category center">
-        <div class="category_item">
-            <a href="#"><img src="img/categori1.svg" alt=""></a>
-            <div class="category_info">
-                <p class="category_text">30% OFF</p>
-                <h3 class="category_subtitle">FOR WOMEN</h3>
-            </div>
-        </div>
-        <div class="category_item">
-            <a href="#"><img src="img/categori2.svg" alt="FOR MEN"></a>
-            <div class="category_info">
-                <p class="category_text">HOT DEAL</p>
-                <h3 class="category_subtitle">FOR MEN</h3>
-            </div>
-        </div>
-        <div class="category_item">
-            <a href="#"><img src="img/categori3.svg" alt="FOR KIDS"></a>
-            <div class="category_info">
-                <p class="category_text">NEW ARRIVALS</p>
-                <h3 class="category_subtitle">FOR KIDS</h3>
-            </div>
-        </div>
-        <div class="category_item wide_item">
-            <a href=""><img src="img/categori4.svg" alt="ACCESORIES"></a>
-            <div class="category_info">
-                <p class="category_text">LUXIROUS & TRENDY</p>
-                <h3 class="category_subtitle"> ACCESORIES</h3>
-            </div>
-        </div>
-
+    <section class="top-head center">
+        <h2 class="top-head__heading">REGISTRATION</h2>
     </section>
 
-    <section class="featured_items center">
-
-        <div class="featured_items_info">
-            <h1 class="info_title">Fetured Items</h1>
-            <p class="info_text">Shop for items based on what we featured in this week</p>
-        </div>
-
-        <div class="catalog">
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product1.svg" alt="" class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
+    <section class="regist-main center">
+        <form class="regist-main__questionnaire">
+            <legend class="regist-main__questionnaire_legend">Your Name</legend>
+            <input class="regist-main__questionnaire_input" type="text" required autofocus placeholder="First Name">
+            <input class="regist-main__questionnaire_input" type="text" required placeholder="Last Name">
+            <div class="regist-main__questionnaire_box-radion">
+                <div class="regist-main__questionnaire_radion">
+                    <input type="radio" id="male" name="gender" />
+                    <label class="regist-main__questionnaire_label" for="male">Male</label><br />
                 </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product2.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
+                <div class="regist-main__questionnaire_radion">
+                    <input type="radio" id="female" name="gender" />
+                    <labe class="regist-main__questionnaire_label" for="female">Female</labe><br />
                 </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
             </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product3.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product4.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product5.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product6.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-        </div>
-
-        <div class="btn_link">
-            <a href="product.html" class="btn">Browse All Product</a>
-        </div>
-    </section>
-
-    <section class="opportunity center">
-        <article class="opportunity_box">
-            <img src="img/opportunity1.svg" alt="opportunity">
-            <h3 class="opportunity_title">Free Delivery</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
-        </article>
-        <article class="opportunity_box">
-            <img src="img/opportunity2.svg" alt="opportunity">
-            <h3 class="opportunity_title">Sales & discounts</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
-        </article>
-        <article class="opportunity_box">
-            <img src="img/opportunity3.svg" alt="opportunity">
-            <h3 class="opportunity_title">Quality assurance</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
+            <legend class="regist-main__questionnaire_legend">Login details</legend>
+            <input class="regist-main__questionnaire_input" type="email" required name="email" placeholder="Email">
+            <input class="regist-main__questionnaire_input" type="password" required name="password"
+                placeholder="Password">
+            <p class="regist-main__questionnaire_text">Please use 8 or more characters, with at least 1 number and a
+                mixture of uppercase and lowercase letters
+            </p>
+            <button class="regist-main__questionnaire_btn" title="submit">
+                <span>JOIN NOW</span>
+                <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z"
+                        fill="white" />
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z"
+                        fill="white" />
+                </svg>
+            </button>
+        </form>
+        <article class="regist-main__info">
+            <h2 class="regist-main__info_text">LOYALTY HAS ITS PERKS</h2>
+            <p class="regist-main__info_text">Get in on the loyalty program where you can earn points and unlock serious
+                perks. Starting with these as soon as you join:</p>
+            <ul class="regist-main__info_ul">
+                <li class="regist-main__info_text">15% off welcome offer</li>
+                <li class="regist-main__info_text">Free shipping, returns and exchanges on all orders</li>
+                <li class="regist-main__info_text">$10 off a purchase on your birthday</li>
+                <li class="regist-main__info_text">Early access to products</li>
+                <li class="regist-main__info_text">Exclusive offers & rewards</li>
+            </ul>
         </article>
     </section>
+
 
     <section class="application center">
         <figure class="application_left">
@@ -251,8 +134,10 @@
             </figcaption>
         </figure>
         <div class="application_right">
-            <h3 class="app_title">SUBSCRIBE</h3>
-            <p class="app_text">FOR OUR NEWLETTER AND PROMOTION</p>
+            <div>
+                <h3 class="app_title">SUBSCRIBE</h3>
+                <p class="app_text">FOR OUR NEWLETTER AND PROMOTION</p>
+            </div>
             <form class="application_form" action="#">
                 <input class="application_form_input" type="email" placeholder="Enter Your Email">
                 <button class="application_form_submit" type="submit">Subscribe</button>
@@ -335,7 +220,6 @@
             </div>
         </nav>
     </footer>
-
 </body>
 
 </html>
