--- a/cart.html
+++ b/cart.html
@@ -68,8 +68,8 @@
                     </details>
                 </div>
             </details>
-            <a href="#" class="header_menu no_icon"><img src="img/header_nav_2.svg" alt="user"></a>
-            <a href="#" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
+            <a href="registration.html" class="header_menu no_icon"><img src="img/header_nav_2.svg" alt="user"></a>
+            <a href="cart.html" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
         </div>
     </header>
 
